// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "wfa/measurement/internal/kingdom/exchange_workflow.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Stores metadata about a RecurringExchange.
message RecurringExchangeDetails {
  // Expects a valid CRON expression.
  // See https://en.wikipedia.org/wiki/Cron#CRON_expression.
  string cron_schedule = 1;

  // ExchangeWorkflow proto.
  ExchangeWorkflow exchange_workflow = 2;

  // Serialized ExchangeWorkflow proto from the public API.
  //
  // This is serialized because DataProviders and ModelProviders will sign the
  // ExchangeWorkflow to keep a record that they agreed to it.
  bytes external_exchange_workflow = 3;

  // Version the public API for `external_exchange_workflow`.
  string api_version = 4;
}
